// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current account actions setCurrentSubscription() should return a Redux action to set the current subscription. 1`] = `
{
  "subscription": Immutable.Map {
    "products": Immutable.Map {
      "prod_LsH6kV35G6zKWo": "price_1LJBjWI9qXomtXqSPZn8LqlD",
    },
    "status": "active",
  },
  "type": "SET_CURRENT_SUBSCRIPTION",
}
`;

exports[`current account actions submit setting creation 1`] = `
[
  {
    "isUpdate": false,
    "setting": {
      "hello": "world",
    },
    "type": "UPDATE_ACCOUNT_SETTING",
  },
]
`;

exports[`current account actions submit setting update 1`] = `
[
  {
    "isUpdate": true,
    "setting": {
      "hello": "world",
      "id": 1,
    },
    "type": "UPDATE_ACCOUNT_SETTING",
  },
]
`;

exports[`current account actions submitSettingSuccess should dispatch the next setting 1`] = `
[
  {
    "isUpdate": false,
    "setting": {
      "data": {
        "view_sections": {},
        "views": {
          "1": {
            "display_order": 2,
          },
        },
        "views_bottom": {},
        "views_top": {},
      },
      "id": 1,
      "type": "views-ordering",
    },
    "type": "UPDATE_ACCOUNT_SETTING",
  },
]
`;

exports[`current account actions update account 1`] = `
[
  {
    "type": "UPDATE_ACCOUNT_START",
  },
  {
    "resp": {
      "id": 2,
    },
    "type": "UPDATE_ACCOUNT_SUCCESS",
  },
]
`;

exports[`current account actions update account owner update account owner 1`] = `
[
  {
    "type": "UPDATE_ACCOUNT_OWNER_SUCCESS",
    "userId": 1,
  },
]
`;

exports[`current account actions update subscription product plans updates the local state with the current subscription product plans 1`] = `
[
  {
    "products": {
      "prod_LsH6kV35G6zKWo": "price_1LJBjWI9qXomtXqSPZn8LqlD",
      "prod_LsHD5xmSqoFBBs": "price_1LJBjXI9qXomtXqSSX34F3we",
    },
    "type": "UPDATE_SUBSCRIPTION_PRODUCTS",
  },
]
`;

exports[`current account actions update subscription update subscription 1`] = `
[
  {
    "subscription": {
      "prices": [
        "price_1LJBjWI9qXomtXqSPZn8LqlD",
      ],
    },
    "type": "UPDATE_SUBSCRIPTION_SUCCESS",
  },
]
`;
